--- a/css/app.css
+++ b/css/app.css
@@ -2,3 +2,21 @@
   width: 100%;
   height: 100dvh;
 }
+
+#local-video{
+  /* width: 100vw; */
+  height: 30vh;
+  object-fit: cover;
+}
+#remote-media-area{
+  /* width: 100vw; */
+  height: 20vh;
+  object-fit: cover;
+}
+.app-list-item {
+  font-size: x-large;
+}
+
+#Todos .button {
+  margin: 0 !important;
+}
